Fix mobile menu button z-index

--- a/static/styles.css
+++ b/static/styles.css
@@ -90,6 +90,7 @@ nav {
     display: none;
     margin-left: auto;
     padding: 5px;
+    z-index: 1000;
 }
 
 .gap {
